--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.11",
         "laravel/framework": "^9.19",
-        "laravel/sanctum": "^2.14.1",
-        "laravolt/avatar": "^4.1",
+        "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.7",
+        "laravolt/avatar": "^4.1",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^2.0",
         "santigarcor/laratrust": "^7.1"
     },
     "require-dev": {
